# deno-wasm-rust

./: README.md  app.js
my-wasm/: Cargo.toml
my-wasm/src/: lib.rs
