[package]
name = "my-wasm"
version = "0.1.0"
authors = ["Isan Rivkin <isanrivkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["cdylib","rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc ={version ="0.4.2", optional=true}

[profile.release]
opt-level="s"

